Updated brand and navigation colors
Changed brand color to official city blue. Updated navigation link colors.

Signed-off-by: J Cornelius <github@jcornelius.com>

--- a/charts/core-customer-services.html
+++ b/charts/core-customer-services.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Core Customer Services
-id: 35
+pid: 50
 category: customerservice
 ---
 <div class="report-group-body">
