--- a/charts/customer-satisfaction.html
+++ b/charts/customer-satisfaction.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Customer Satisfaction
-id: 35
+pid: 40
 category: customerservice
 ---
 <div class="report-group-body">
