Updated chart pages

--- a/charts/atlanta-police-department.html
+++ b/charts/atlanta-police-department.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Public Safety Departments
+title: Atlanta Police Department
 pid: 60
 category: public-safety-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.public-safety %}
+  {% for group in site.data.atlanta-police-department %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
