--- a/charts/code-enforcement.html
+++ b/charts/code-enforcement.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Customer Satisfaction
-pid: 40
-category: customerservice
+title: Office of Code Enforcement
+pid: 120
+category: operational-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.customer-satisfaction %}
+  {% for group in site.data.code-enforcement %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
