--- a/charts/department-of-corrections.html
+++ b/charts/department-of-corrections.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Emergency Response
-pid: 30
-category: public-safety
+title: Department Of Corrections
+pid: 80
+category: public-safety-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.emergency-response %}
+  {% for group in site.data.department-of-corrections %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
