--- a/charts/municipal-court.html
+++ b/charts/municipal-court.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Core Customer Services
-pid: 50
-category: customerservice
+title: Municipal Court
+pid: 20
+category: public-safety-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.core-customer-services %}
+  {% for group in site.data.municipal-court %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
