--- a/charts/office-of-buildings.html
+++ b/charts/office-of-buildings.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Municipal
-pid: 20
-category: public-safety
+title: Office of Buildings
+pid: 130
+category: operational-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.municipal-courts %}
+  {% for group in site.data.office-of-buildings %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
