--- a/charts/watershed-management.html
+++ b/charts/watershed-management.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Public Safety
-pid: 10
-category: public-safety
+title: Department of Watershed Management
+pid: 110
+category: operational-departments
 ---
 <div class="report-group-body">
-  {% for group in site.data.public-safety %}
+  {% for group in site.data.watershed-management %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
