--- a/charts/department-of-corrections.html
+++ b/charts/department-of-corrections.html
@@ -4,6 +4,9 @@ title: Department Of Corrections
 pid: 80
 category: public-safety-departments
 ---
+<h2>Department of Corrections</h2>
+<h3>The City of Atlanta Department of Corrections' operates the City’s Jail.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.
+This page provides performance data focused on key performance indicators for these two areas.</h3>
 <div class="report-group-body">
   {% for group in site.data.department-of-corrections %}
   <header class="report-group-heading">
