--- a/charts/municipal-court.html
+++ b/charts/municipal-court.html
@@ -4,6 +4,8 @@ title: Municipal Court
 pid: 20
 category: public-safety-departments
 ---
+<h2>Atlanta Municipal Court</h2>
+<h3>The Atlanta Municipal Court adjudicates traffic cases and criminal cases originating within the City that do not reach the level of the State Court system.  One core goal of the Court is to provide swift disposition of its cases. This page provides performance data focused on key performance indicators related to the Court’s efficiency in adjudicating both traffic and criminal cases.</h3>
 <div class="report-group-body">
   {% for group in site.data.municipal-court %}
   <header class="report-group-heading">
