--- a/charts/watershed-management.html
+++ b/charts/watershed-management.html
@@ -4,6 +4,8 @@ title: Department of Watershed Management
 pid: 60
 category: operational-departments
 ---
+<h2>Department of Watershed Management</h2>
+<h3>The Department of Watershed Management is dedicated to providing the highest quality drinking water and wastewater services to residential, businesses and wholesale customers. The Department’s mission includes delivering excellent customer service and ensuring professional stewardship of Atlanta’s drinking water, wastewater and storm water systems.  In addition, work underway on the second or “first amended” consent decree. This page provides performance data on key performance indicators related to these three core areas of the Department’s operations – Customer Service, Compliance and Infrastructure Management.</h3>
 <div class="report-group-body">
   {% for group in site.data.watershed-management %}
   <header class="report-group-heading">
