--- a/charts/public-works.html
+++ b/charts/public-works.html
@@ -4,6 +4,8 @@ title: Department of Public Works
 pid: 100
 category: operational-departments
 ---
+<h2>Department of Public Works</h2>
+<h3>The Department of Public Works manages the City’s Transportation and Solid Waste Services.  The Department’s mission is to become the premier provider of efficient and effective Transportation and Solid Waste Services. This page provides performance data on key performance indicators related to customer service and operational effectiveness for both areas of the Department.</h3>
 <div class="report-group-body">
   {% for group in site.data.parks-works %}
   <header class="report-group-heading">
