--- a/charts/atlanta-police-department.html
+++ b/charts/atlanta-police-department.html
@@ -4,8 +4,11 @@ title: Atlanta Police Department
 pid: 10
 category: public-safety-departments
 ---
-<h1>Atlanta Police Department</h1>
-<h3>With an authorized strength of over 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Atlanta Police Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  In addition, the Police Department operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services. This page provides performance data focused on key performance indicators for these two areas – Crime reduction and E911 Call Center performance.</h3>
+<div class="header">
+  <h1>Atlanta Police Department</h1>
+  <p>With an authorized strength of over 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Atlanta Police Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  In addition, the Police Department operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.</p>
+  <p>This page provides performance data focused on key performance indicators for these two areas – Crime reduction and E911 Call Center performance.</p>
+</div>
 <div class="report-group-body">
   {% for group in site.data.atlanta-police-department %}
   <header class="report-group-heading">
