Fixed data refrence

--- a/charts/public-works.html
+++ b/charts/public-works.html
@@ -10,7 +10,7 @@ category: operational-departments
   <p>This page provides performance data on key performance indicators related to customer service and operational effectiveness for both areas of the Department.</p>
 </div>
 <div class="report-group-body">
-  {% for group in site.data.parks-works %}
+  {% for group in site.data.public-works %}
   <header class="report-group-heading">
     <hgroup>
       <h2>{{ group.group-title }}</h2>
