--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: welcome
   <div class="col-sm-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h5 class="panel-title">Mayor's Office of Innovation Delivery and Performance<br>FOR Atlanta</h5>
+        <h5 class="panel-title">Mayor's Office of Innovation Delivery and Performance<br><br><strong>FOR Atlanta</strong></h5>
       </div>
       <div class="panel-body">
         <p><b>City of Atlanta</b><br>55 Trinity Avenue, Ste 2400<br>Atlanta, Georgia 30303</p>
