--- a/charts/parks-and-rec.html
+++ b/charts/parks-and-rec.html
@@ -6,7 +6,7 @@ category: operational-departments
 ---
 <div class="header">
   <h1>Department of Parks and Recreation</h1>
-  <p>The Department of Parks and Recreatip aims to enhance the lives of City of Atlanta residents and visitors by offering programs, services and activities that encourage participation in recreational activities, leisure services and cultural experiences. The strives to achieve this by providing safe and exceptional parks, facilities and programs. </p>
+  <p>The Department of Parks and Recreation aims to enhance the lives of City of Atlanta residents and visitors by offering programs, services and activities that encourage participation in recreational activities, leisure services and cultural experiences. The Department strives to achieve this by providing safe and exceptional parks, facilities and programs. </p>
   <p>This page provides performance data on key performance indicators related to core areas of this mission – Customer Service, Park Maintenance, Rec Center Attendance and Youth Programming.</p>
 </div>
 <div class="report-group-body">
