--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: welcome
       <div class="panel-body">
         <p><b>City of Atlanta</b><br>55 Trinity Avenue, Ste 2400<br>Atlanta, Georgia 30303</p>
         <p><b>Emily Love</b><br>Director<br>Tel: (404) 330-6915<br><a href="mailto:eplove@atlantaga.gov">eplove@atlantaga.gov</a></p>
-        <p><b>Matt Malament</b><br>Deupty Director<br>Tel: (404) 330-6904<br><a href="mailto:mmalament@atlantaga.gov">mmalament@atlantaga.gov</a></p>
+        <p><b>Matt Malament</b><br>Deputy Director<br>Tel: (404) 330-6904<br><a href="mailto:mmalament@atlantaga.gov">mmalament@atlantaga.gov</a></p>
         <p><b>Matthew Bartleet</b><br>Senior Project Manager<br>Tel: (404) 330-6794<br><a href="mailto:mbartleet@atlantaga.gov">mbartleet@atlantaga.gov</a></p>
         <p><b>John Zimmerman</b><br>Senior Project Manager<br>Tel: (404) 330-6690<br><a href="mailto:jzimmerman@atlantaga.gov">jzimmerman@atlantaga.gov</a></p>
         <p><b>Sean Dunn</b><br>Project Manager<br>Tel: (404) 865-8702<br><a href="mailto:skdunn@atlantaga.gov">skdunn@atlantaga.gov</a></p>
