--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: welcome
       <div class="panel-body">
         <p>Housed within the Mayor’s Office of Innovation Delivery and Performance, Focus On Results Atlanta (FOR Atlanta) is the City’s performance management team charged with delivering tangible and lasting improvements across City services by collaborating with departments to drive performance improvement. We assess City services and identify opportunities to improve results through data-driven decision-making, business process efficiencies, organizational strategies and technology applications.
         </p>
-        <p>FOR Atlanta is a structured, iterative program of evaluation and improvement that FOR Atlanta leverages has helped the City:
+        <p>FOR Atlanta is a structured, iterative program of evaluation and improvement that has helped the City:
           <ul>
             <li>Focus on outcomes, and their impact on citizens, by identifying and tracking core performance metrics that represent the results the City seeks to drive.</li>
             <li>Use hard data and thoughtful analysis to improve the efficiency and effectiveness of municipal services, further ensuring that City resources and taxpayer dollars are being used as efficiently as possible.</li>
