Multiple updates to text on various pages

--- a/charts/atlanta-police-department.html
+++ b/charts/atlanta-police-department.html
@@ -6,8 +6,8 @@ category: public-safety-departments
 ---
 <div class="header">
   <h1>Atlanta Police Department</h1>
-  <p>With an authorized strength of over 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Atlanta Police Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  In addition, the Police Department operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.</p>
-  <p>This page provides performance data focused on key performance indicators for these two areas – Crime reduction and E911 Call Center performance.</p>
+  <p>With an authorized force of more than 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  The Department also operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.</p>
+  <p>This page provides performance data focused on key indicators for two areas – Crime reduction and the E911 Call Center.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.atlanta-police-department %}
