--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@ title: welcome
       <div class="panel-body">
         <p>Housed within the Mayor’s Office of Innovation Delivery and Performance, Focus On Results Atlanta (FOR Atlanta) is the City’s performance management team charged with delivering tangible and lasting improvements across City services by collaborating with departments to drive performance improvement. We assess City services and identify opportunities to improve results through data-driven decision-making, business process efficiencies, organizational strategies and technology applications.
         </p>
-        <p>FOR Atlanta is a structured, iterative program of evaluation and improvement that has helped the City:
+        <p>FOR Atlanta oversees a structured, iterative program of evaluation and improvement that has helped the City:
           <ul>
             <li>Focus on outcomes, and their impact on citizens, by identifying and tracking core performance metrics that represent the results the City seeks to drive.</li>
-            <li>Use hard data and thoughtful analysis to improve the efficiency and effectiveness of municipal services, further ensuring that City resources and taxpayer dollars are being used as efficiently as possible.</li>
+            <li>Use hard data and thoughtful analysis to improve the efficiency and effectiveness of municipal services, further ensuring that City resources and taxpayer dollars are being used efficiently.</li>
           </ul>
         </p>
-        <p>The highlights included in this website reflect some of the core metrics which the City of Atlanta is measuring, managing and leveraging to drive performance across the City.  For ease of use, the website is broken out by Department and grouped into two broad areas:
+        <p>The highlights included in this website reflect some of the core metrics that the City of Atlanta is measuring, managing and using to drive performance across the City.  For ease of use, the website is grouped into two areas:
           <ul>
-            <li>Public Safety – Police, Fire, Corrections and Municipal Court</li>
-            <li>Core Operational Departments – Non-Public Safety Operating Departments that provide core services to constituents</li>
+            <li>Public Safety Departments – Police, Fire, Corrections and Municipal Court</li>
+            <li>Core Operational Departments – Non-Public Safety Operating Departments that provide core services to the citizens of Atlanta</li>
           </ul>
         </p>
-        <p>Mayor Kasim Reed has made a commitment to ensuring that management excellence and constant improvement in service delivery are priorities for the City of Atlanta. We are operating in an increasingly competitive world while striving to do more with less, and to deliver a better product for our customers. Strategic performance management is critical for driving strong policy and operational decisions, particularly in City government.
-        </p>
-        <p>
-          As we respond to the growing needs of our City and residents, the prioritization of cost, resources and impact is critical for effective management of performance.  We hope that this website will provide you with some insight into what we are measuring and managing in order to achieve these goals.
+        <p>Mayor Kasim Reed has made a commitment to ensuring that management excellence and constant improvement in service delivery are priorities for the City of Atlanta. We are operating in an increasingly competitive world while striving to do more with less, and to deliver a better product for our customers. We hope that this website will provide you with some insight into what we are measuring and managing in order to achieve these goals.
         </p>
 
       </div>
