--- a/charts/code-enforcement.html
+++ b/charts/code-enforcement.html
@@ -6,7 +6,7 @@ category: operational-departments
 ---
 <div class="header">
   <h1>Office of Code Enforcement</h1>
-  <p>The Office of Code Enforcement is house within the Atlanta Police Department.  It is responsible for the inspection and enforcement of residential and commercial properties that violate the Atlanta Housing Code, Graffiti Ordinance, and/or Commercial Maintenance and Industrial Code.  The Office’s mission is to ensure safe and sanitary conditions in housing and commercial properties through effective code enforcement efforts. </p>
+  <p>The Office of Code Enforcement is housed within the Atlanta Police Department.  It is responsible for the inspection and enforcement of residential and commercial properties that violate the Atlanta Housing Code, Graffiti Ordinance, and/or Commercial Maintenance and Industrial Code.  The Office’s mission is to ensure safe and sanitary conditions in housing and commercial properties through effective code enforcement efforts. </p>
   <p>This page provides performance data on key performance indicators related to the Office’s ability to efficiently inspect and address Code compliance complaints.</p>
 </div>
 
