--- a/charts/office-of-buildings.html
+++ b/charts/office-of-buildings.html
@@ -6,7 +6,7 @@ category: operational-departments
 ---
 <div class="header">
   <h1>Office of Buildings</h1>
-  <p>The Office of Buildings reviews, approves and issues all permits required by the City's Codes for the repair, alteration or addition to all public and private buildings and structures; as well as, permits for new construction. The Office also assists property owners in their effort to ensure that buildings are in compliance with the standards set forth in the City's Codes.</p>
+  <p>The Office of Buildings reviews, approves and issues all permits required by the City's Codes for the repair, alteration or addition to public and private buildings and structures. The Office also issues permits for new construction. The Office assists property owners in their effort to ensure that buildings are in compliance with the standards set forth in the City's Codes.</p>
   <p>This page provides performance data on key performance indicators related to the Office’s customer service performance as well as overall building permit activity within the City, which is a key indicator of economic development.</p>
 </div>
 <div class="report-group-body">
