--- a/charts/atlanta-fire-rescue.html
+++ b/charts/atlanta-fire-rescue.html
@@ -7,7 +7,7 @@ category: public-safety-departments
 <div class="header">
   <h1>Atlanta Fire Rescue Department</h1>
   <p>Atlanta Fire Rescue is a modern, all-hazards fire department.  Department staff operates out of 35 fire stations, which include five stations at Hartsfield-Jackson Atlanta International Airport. There are over 1,000 employees (988 sworn and 44 civilian) serving an area of 132 square miles within the city limits of Atlanta. The Department’s two core functions are responding swiftly to Fire and Emergency Medical Services (EMS)-related incidents.</p>
-  <p>This page provides performance data focused on key performance indicators for these two areas.</p>
+  <p>This page provides performance data focused on key indicators in these areas.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.atlanta-fire-rescue %}
