More updates to text on most pages

--- a/charts/atlanta-police-department.html
+++ b/charts/atlanta-police-department.html
@@ -6,7 +6,7 @@ category: public-safety-departments
 ---
 <div class="header">
   <h1>Atlanta Police Department</h1>
-  <p>With an authorized force of more than 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  The Department also operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.</p>
+  <p>With an authorized force 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community.  The Department also operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.</p>
   <p>This page provides performance data focused on key indicators for two areas – Crime reduction and the E911 Call Center.</p>
 </div>
 <div class="report-group-body">
