--- a/charts/aviation.html
+++ b/charts/aviation.html
@@ -7,7 +7,7 @@ category: operational-departments
 <div class="header">
   <h1>Department of Aviation</h1>
   <p>The Department of Aviation manages Hartsfield-Jackson Atlanta International Airport.  Given the complexity of its operation, the Department’s mission contains many facets.  Two key parts of this mission are to drive economic development and operate with the highest level of customer service and efficiency.</p>
-  <p>This page provides performance data on key performance indicators related to these two parts of the Department’s mission.</p>
+  <p>This page provides performance data on key indicators related to these two parts of the Department’s mission.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.aviation %}
