--- a/charts/department-of-corrections.html
+++ b/charts/department-of-corrections.html
@@ -6,8 +6,8 @@ category: public-safety-departments
 ---
 <div class="header">
   <h1>Department of Corrections</h1>
-  <p>The City of Atlanta Department of Corrections operates the City’s Jail.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.</p>
-  <p> This page provides performance data focused on key performance indicators for these two areas.</p>
+  <p>The City of Atlanta Department of Corrections operates the City’s Detention Center.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.</p>
+  <p> This page provides performance data focused on key indicators for these areas.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.department-of-corrections %}
