--- a/charts/public-works.html
+++ b/charts/public-works.html
@@ -7,7 +7,7 @@ category: operational-departments
 <div class="header">
   <h1>Department of Public Works</h1>
   <p>The Department of Public Works manages the City’s Transportation and Solid Waste Services.  The Department’s mission is to become the premier provider of efficient and effective Transportation and Solid Waste Services.</p>
-  <p>This page provides performance data on key performance indicators related to customer service and operational effectiveness for both areas of the Department.</p>
+  <p>This page provides performance data on key indicators related to customer service and operational effectiveness for both areas of the Department.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.public-works %}
