--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@ title: welcome
         <h3 class="panel-title">Introduction to FOR Atlanta</h3>
       </div>
       <div class="panel-body">
-        <p>Housed within the Mayor’s Office of Innovation Delivery and Performance, Focus On Results Atlanta (FOR Atlanta) is the City’s performance management team charged with delivering tangible and lasting improvements across City services by collaborating with departments to drive performance improvement. We assess City services and identify opportunities to improve results through data-driven decision-making, business process efficiencies, organizational strategies and technology applications.
+        <p>Housed within the Mayor’s Office of Innovation Delivery and Performance, Focus On Results Atlanta (FOR Atlanta) is the City’s performance management team charged with delivering tangible and lasting improvements across City services by collaborating with departments to drive performance improvement. We:
         </p>
-        <p>FOR Atlanta oversees a structured, iterative program of evaluation and improvement that has helped the City:
+        <p>
           <ul>
+			<li>Assess City services and identify opportunities to improve results through data-driven decision-making, business process efficiencies, organizational strategies and technology applications.</li>
             <li>Focus on outcomes, and their impact on citizens, by identifying and tracking core performance metrics that represent the results the City seeks to drive.</li>
             <li>Use hard data and thoughtful analysis to improve the efficiency and effectiveness of municipal services, further ensuring that City resources and taxpayer dollars are being used efficiently.</li>
           </ul>
