Added data link to front page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ title: welcome
             <li>Core Operational Departments – Non-Public Safety Operating Departments that provide core services to the citizens of Atlanta</li>
           </ul>
         </p>
+		<p>Data on this website will be updated at the end of each Quarter. The raw data behind these charts can be accessed <a href="https://www.dropbox.com/s/445io4np83pqlhd/data.csv?dl=0">here</a></p>
         <p>Mayor Kasim Reed has made a commitment to ensuring that management excellence and constant improvement in service delivery are priorities for the City of Atlanta. We are operating in an increasingly competitive world while striving to do more with less, and to deliver a better product for our customers. We hope that this website will provide you with some insight into what we are measuring and managing in order to achieve these goals.
         </p>
 
