DWM data updates

--- a/charts/watershed-management.html
+++ b/charts/watershed-management.html
@@ -7,7 +7,7 @@ category: operational-departments
 <div class="header">
   <h1>Department of Watershed Management</h1>
   <p>The Department of Watershed Management is dedicated to providing the highest quality drinking water and waste water services to residential, businesses and wholesale customers. The Department’s mission includes delivering excellent customer service and ensuring professional stewardship of Atlanta’s drinking water, waste water and storm water systems.  In addition, work is under way on the second or “first amended” consent decree.</p>
-  <p>This page provides performance data on key indicators related to core areas of the Department’s operations – Customer Service, Compliance and Infrastructure Management.</p>
+  <p>This page provides performance data on key indicators related to core areas of the Department’s operations – Customer Service, Billing, Infrastructure Management and Compliance.</p>
 </div>
 
 <div class="report-group-body">
