--- a/charts/public-works.html
+++ b/charts/public-works.html
@@ -8,6 +8,7 @@ category: operational-departments
   <h1>Department of Public Works</h1>
   <p>The Department of Public Works manages the City’s Transportation and Solid Waste Services.  The Department’s mission is to become the premier provider of efficient and effective Transportation and Solid Waste Services.</p>
   <p>This page provides performance data on key indicators related to customer service and operational effectiveness for both areas of the Department.</p>
+  <p>In January 2014, the Department upgraded its work order management and data tracking systems. To ensure data quality and comparability across time, the starting point of the Department's Customer Service data on this page will be January 2014.</p>
 </div>
 <div class="report-group-body">
   {% for group in site.data.public-works %}
