--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@ title: welcome
             <li>Use hard data and thoughtful analysis to improve the efficiency and effectiveness of municipal services, further ensuring that City resources and taxpayer dollars are being used efficiently.</li>
           </ul>
         </p>
-        <p>The highlights included in this website reflect some of the core metrics that the City of Atlanta is measuring, managing and using to drive performance across the City.  For ease of use, the website is grouped into two areas:
+        <p>The highlights included in this website reflect some of the core metrics that the City of Atlanta is measuring, managing and using to drive performance across the City<sup>1</sup>.  For ease of use, the website is grouped into two areas<sup>2</sup>:
           <ul>
             <li>Public Safety Departments – Police, Fire, Corrections and Municipal Court</li>
             <li>Core Operational Departments – Non-Public Safety Operating Departments that provide core services to the citizens of Atlanta</li>
           </ul>
         </p>
 		<p>Mayor Kasim Reed has made a commitment to ensuring that management excellence and constant improvement in service delivery are priorities for the City of Atlanta. We are operating in an increasingly competitive world while striving to do more with less, and to deliver a better product for our customers. We hope that this website will provide you with some insight into what we are measuring and managing in order to achieve these goals.
-		<p><small>Data on this website will be updated at the end of each Quarter. The raw data behind these charts can be accessed <a href="https://www.dropbox.com/s/445io4np83pqlhd/data.csv?dl=0">by clicking here</a>.</small></p>
-		<p><small>Please note that this page only provides data for the City Departments that constituents most frequently interact with. For a full listing of City Departments, please visit the <a href="http://www.atlantaga.gov/">City of Atlanta website</a>.</small></p>
+		<p><small><sup>1</sup>Data on this website will be updated at the end of each Quarter. The raw data behind these charts can be accessed <a href="https://www.dropbox.com/s/445io4np83pqlhd/data.csv?dl=0">by clicking here</a>.</small></p>
+		<p><small><sup>2</sup>Please note that this page only provides data for the City Departments that constituents most frequently interact with. For a full listing of City Departments, please visit the <a href="http://www.atlantaga.gov/">City of Atlanta website</a>.</small></p>
         </p>
 
       </div>
