--- a/charts/watershed-management.html
+++ b/charts/watershed-management.html
@@ -8,7 +8,7 @@ category: operational-departments
   <h1>Department of Watershed Management</h1>
   <p>The Department of Watershed Management is dedicated to providing the highest quality drinking water and waste water services to residential, businesses and wholesale customers. The Department’s mission includes delivering excellent customer service and ensuring professional stewardship of Atlanta’s drinking water, waste water and storm water systems.  In addition, work is under way on the second or “first amended” consent decree.</p>
   <p>This page provides performance data on key indicators related to core areas of the Department’s operations – Customer Service, Billing, Infrastructure Management and Compliance.</p>
-  <p>In January 2014, the Department upgraded its work order management and data tracking systems. To ensure data quality and comparability across time, the starting point of the Department's Customer Service data on this page will be January 2014.</p>
+  <p>In August 2014, in preparation for the launch of the City's new 311 call center, the Department undertook an extensive review of the service level agreements (SLAs) and target completion timeframes for all of the 50+ Service Request types that it handles.  This review resulted in multiple changes to SLAs and targets for individual service requests. To ensure data quality and comparability across time, the starting point of the Department's Customer Service data on this page will be August 2014.</p>
 </div>
 
 <div class="report-group-body">
